--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="hunter_green">#355E3B</color>
     <color name="mint_green">#3EB489</color>
+    <color name="blue">#618197</color>
 </resources>
