--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="hunter_green">#355E3B</color>
     <color name="mint_green">#3EB489</color>
     <color name="blue">#618197</color>
+    <color name="light_blue">#b6c9d0</color>
 </resources>
