--- a/app/src/main/res/layout/fragment_start.xml
+++ b/app/src/main/res/layout/fragment_start.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:text="Guess The Price!"
         android:textColor="@color/black"
-        android:textSize="28dp"
+        android:textSize="28sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -29,7 +29,7 @@
         android:padding="10dp"
         android:text="Start"
         android:textColor="@color/black"
-        android:textSize="28dp"
+        android:textSize="28sp"
         android:textStyle=""
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
