--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="mint_green">#3EB489</color>
     <color name="blue">#618197</color>
     <color name="light_blue">#b6c9d0</color>
+    <color name="dark_grey">#434344</color>
 </resources>
