10/13/23 color changes, add observers, update recap layout

--- a/app/src/main/res/layout/fragment_play_game.xml
+++ b/app/src/main/res/layout/fragment_play_game.xml
@@ -6,6 +6,36 @@
     android:layout_height="match_parent"
     android:background="@color/light_blue">
 
+    <TextView
+        android:id="@+id/playGameName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="10dp"
+        android:text="Name"
+        android:textColor="@color/black"
+        android:textSize="28sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0" />
+
+    <TextView
+        android:id="@+id/playGameScore"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="10dp"
+        android:text="score"
+        android:textColor="@color/black"
+        android:textSize="28sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1"
+        app:layout_constraintHorizontal_bias=".9" />
 
     <TextView
         android:id="@+id/playGameLowerButton"
@@ -55,6 +85,7 @@
 
 
     <ImageView
+        android:id="@+id/playGameImage"
         android:layout_width="0dp"
         android:layout_height="300dp"
         android:src="@drawable/tesla_cyber_truck"
