--- a/app/src/main/res/layout/fragment_recap.xml
+++ b/app/src/main/res/layout/fragment_recap.xml
@@ -2,8 +2,10 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/fragment_recap"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="300dp"
+    android:layout_height="400dp"
+    android:layout_marginLeft="50dp"
+    android:layout_marginTop="100dp"
     android:background="@color/dark_grey">
 
     <TextView
@@ -19,7 +21,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias=".25" />
+        app:layout_constraintVertical_bias=".15" />
 
     <TextView
         android:id="@+id/scoreBox"
@@ -47,7 +49,7 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias=".3"
+        app:layout_constraintHorizontal_bias="0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@id/recap"
         app:layout_constraintVertical_bias="0" />
@@ -63,7 +65,7 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias=".75"
+        app:layout_constraintHorizontal_bias="1.1"
         app:layout_constraintRight_toRightOf="@id/scoreText"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@id/recap"
