--- a/app/src/main/res/layout/fragment_start.xml
+++ b/app/src/main/res/layout/fragment_start.xml
@@ -4,7 +4,7 @@
     android:id="@+id/fragment_start"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/blue">
+    android:background="@color/light_blue">
 
     <!-- comment -->
     <TextView
