--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="hunter_green">#355E3B</color>
     <color name="mint_green">#3EB489</color>
-    <color name="blue">#618197</color>
-    <color name="light_blue">#b6c9d0</color>
-    <color name="dark_grey">#434344</color>
+    <color name="blue">#3e9bc0</color>
+    <color name="light_blue">#acd4e4</color>
+    <color name="dark_grey">#73808e</color>
 </resources>
