--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,6 @@
     <color name="blue">#3e9bc0</color>
     <color name="light_blue">#acd4e4</color>
     <color name="dark_grey">#73808e</color>
+    <color name="cherry_red">#D2042D</color>
+    <color name="celadon_green">#AFE1AF</color>
 </resources>
