--- a/app/src/main/res/drawable/box.xml
+++ b/app/src/main/res/drawable/box.xml
@@ -2,13 +2,12 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <corners android:radius="10dp" />
-            <stroke android:width="1.5dp" android:color="@color/black" />
+            <!-- <corners android:radius="50dp" /> -->
+            <stroke android:width="2.5dp" android:color="@color/black" />
             <padding android:bottom="2.5dp" />
             <padding android:top="2.5dp" />
             <padding android:left="2.5dp" />
             <padding android:right="2.5dp" />
-            <solid android:color="@color/cherry_red"/>
         </shape>
 
     </item>
