--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,6 +3,9 @@
     <style name="Base.Theme.KHFirstApp" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+
+        <item name="android:statusBarColor">@color/black</item>
+        <item name="android:windowFullscreen">true</item> <!-- This makes app full screen -->
     </style>
 
     <style name="Theme.KHFirstApp" parent="Base.Theme.KHFirstApp" />
