--- a/app/src/main/res/layout/fragment_recap.xml
+++ b/app/src/main/res/layout/fragment_recap.xml
@@ -6,6 +6,7 @@
     android:layout_width="350dp"
     android:layout_height="500dp"
     android:background="@color/dark_grey"
+    android:clickable="true"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintLeft_toLeftOf="parent"
     app:layout_constraintRight_toRightOf="parent"
